--- a/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
@@ -1812,7 +1812,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6108881231992997,
+     "commandId": 6097486787422673,
      "dataframes": [
       "_sqldf"
      ]
@@ -1827,7 +1827,7 @@
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "trainer_bronze",
-      "label": "",
+      "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
        "widgetDisplayType": "Text",
@@ -1838,11 +1838,11 @@
      "widgetInfo": {
       "widgetType": "text",
       "defaultValue": "trainer_bronze",
-      "label": "",
+      "label": null,
       "name": "BRONZE_SCHEMA",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
