--- a/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a6bc86c4-58e5-4f4f-af86-f3311937bb70",
      "showTitle": false,
@@ -113,7 +116,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8cf6c95b-2145-4ffe-a23d-8118983d4dd1",
      "showTitle": false,
@@ -152,7 +158,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9981cb88-642b-4f84-8a87-ebf5d572e504",
      "showTitle": false,
@@ -203,7 +212,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "889facc3-12b1-46b1-ac58-004aef6b0971",
      "showTitle": false,
@@ -275,7 +287,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "44eb5392-ef2f-41d4-bf26-057fcd3d1654",
      "showTitle": false,
@@ -437,6 +452,8 @@
    },
    "outputs": [],
    "source": [
+    "from pyspark.sql.types import StructType, StructField, StringType\n",
+    "\n",
     "# Definicja schematu dla customers\n",
     "# Struktura rzeczywista: customer_id, first_name, last_name, email, phone, city, state, country, registration_date, customer_segment\n",
     "customers_schema = StructType([\n",
@@ -506,7 +523,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e0a84ce7-93e5-4da7-8492-e6ca35479b17",
      "showTitle": false,
@@ -855,7 +875,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "630d2a6d-8307-47ea-8de2-abacfe368d11",
      "showTitle": false,
@@ -1140,7 +1163,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "da237eab-76fe-4a9a-9e89-c98b159d5c96",
      "showTitle": false,
