--- a/DZIEN_1_Fundamentals_Exploration/03_basic_transformations_sql_pyspark.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/03_basic_transformations_sql_pyspark.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7c8c4ae6-ba62-4942-a5a7-a41db20064dc",
      "showTitle": false,
@@ -30,7 +33,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "958d123b-4af6-45cd-88d3-b65522c60340",
      "showTitle": false,
@@ -56,7 +62,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "634cc23e-f13b-43e4-9b89-2f8d8d1b1ed1",
      "showTitle": false,
@@ -84,7 +93,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "374ee190-dc21-47c0-a039-ed08cf32a655",
      "showTitle": false,
@@ -727,6 +739,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -738,13 +751,15 @@
    },
    "outputs": [],
    "source": [
-    "# SQL: Nowe kolumny w SELECT\n",
+    "\n",
     "%sql\n",
+    "-- SQL: Nowe kolumny w SELECT\n",
     "    SELECT \n",
     "        first_name || ' ' || last_name AS full_name,\n",
     "        UPPER(first_name || ' ' || last_name) AS full_name_upper,\n",
     "        email,\n",
-    "        SPLIT(email, '@')[1] AS email_domain,\n",
+    "        -- GET pobiera element o podanym indeksie z tablicy zwróconej przez SPLIT (indeksowanie od 0)\n",
+    "        get(SPLIT(email, '@'), 1) AS email_domain,\n",
     "        registration_date,\n",
     "        YEAR(registration_date) AS registration_year,\n",
     "        customer_segment,\n",
@@ -1778,6 +1793,28 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "58bf0ff9-7966-4e22-944c-068ad51b481e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_customers_for_agg.createOrReplaceTempView(\"customers_with_value\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "a79f50ec-ad0d-47aa-8959-1e794bc32f99",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -2112,7 +2149,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "13af1a8b-78c4-4a13-9ebd-3c47a3b4faa9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Porównanie PySpark vs SQL - Kompleksowe przykłady\n",
     "\n",
@@ -2121,8 +2170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "36316929-6d67-4f52-87fe-e30763a3f635",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Kompleksowe czyszczenie danych w PySpark\n",
@@ -2142,15 +2203,39 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d3ecefb2-08ef-491b-a542-ef8e8e1d340e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**SQL Equivalent:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "06e3c8c5-82e1-45ca-96ec-72fdc2e14523",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Najpierw utwórz temporary view\n",
@@ -2612,7 +2697,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5376352791528939,
+     "commandId": 6097486787422760,
      "dataframes": [
       "_sqldf"
      ]
