--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "091d9255-523a-4f23-8b17-8a94d8a0e1f3",
      "showTitle": false,
@@ -23,7 +20,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1d616be3-1dff-4372-a6fb-1be07f8cba57",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## 📁 Architektura danych w szkoleniu\n",
     "\n",
@@ -97,11 +103,11 @@
     "\n",
     "# === Ścieżka do datasetów ===\n",
     "# Dla lokalnego środowiska - ścieżka do folderu dataset w tym repo\n",
-    "import os\n",
-    "DATASET_BASE_PATH = os.path.abspath(\"../dataset\")\n",
+    "#import os\n",
+    "#DATASET_BASE_PATH = os.path.abspath(\"../dataset\")\n",
     "\n",
-    "# Dla Databricks środowiska - Unity Catalog Volume:\n",
-    "# DATASET_BASE_PATH = \"/Volumes/training_catalog/default/kion_datasets\"\n",
+    " #Dla Databricks środowiska - Unity Catalog Volume:\n",
+    "DATASET_BASE_PATH = \"/Volumes/training_catalog/default/kion_datasets\"\n",
     "\n",
     "\n",
     "print(f\"Dataset base path: {DATASET_BASE_PATH}\")\n",
@@ -147,200 +153,6 @@
     "print(f\"✓ Katalog: {CATALOG}\")\n",
     "print(f\"✓ Schematy: {BRONZE_SCHEMA}, {SILVER_SCHEMA}, {GOLD_SCHEMA}\")\n",
     "print(f\"✓ Ścieżka do danych: {DATASET_BASE_PATH}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 🔧 Funkcje pomocnicze (opcjonalne - tylko dla Dzień 3)\n",
-    "\n",
-    "Poniższa funkcja kopiuje dane z lokalnego folderu `dataset/` do Unity Catalog Volumes.  \n",
-    "**Użyj tylko jeśli pracujesz na Databricks i chcesz przygotować dane dla Dzień 3.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def copy_dataset_to_volumes():\n",
-    "    \"\"\"\n",
-    "    Kopiuje dane z lokalnego folderu dataset/ do Unity Catalog Volumes.\n",
-    "    Używane tylko w środowisku Databricks dla przygotowania Dzień 3.\n",
-    "    \"\"\"\n",
-    "    import shutil\n",
-    "    from pathlib import Path\n",
-    "    \n",
-    "    print(\"=== Kopiowanie danych do Unity Catalog Volumes ===\")\n",
-    "    print(f\"Źródło: {DATASET_BASE_PATH}\")\n",
-    "    print(f\"Cel: {VOLUMES_BASE_PATH}\")\n",
-    "    \n",
-    "    try:\n",
-    "        # Sprawdź, czy Volume istnieje\n",
-    "        dbutils.fs.ls(VOLUMES_BASE_PATH)\n",
-    "        print(\"✓ Volume dostępny\")\n",
-    "        \n",
-    "        # Kopiuj każdy folder z dataset/\n",
-    "        folders_to_copy = ['customers', 'orders', 'products']\n",
-    "        \n",
-    "        for folder in folders_to_copy:\n",
-    "            source = os.path.join(DATASET_BASE_PATH, folder)\n",
-    "            target = f\"{VOLUMES_BASE_PATH}/{folder}\"\n",
-    "            \n",
-    "            if os.path.exists(source):\n",
-    "                print(f\"  Kopiowanie: {folder}/\")\n",
-    "                \n",
-    "                # Utwórz folder w Volumes jeśli nie istnieje\n",
-    "                try:\n",
-    "                    dbutils.fs.mkdirs(target)\n",
-    "                except:\n",
-    "                    pass\n",
-    "                \n",
-    "                # Kopiuj pliki\n",
-    "                for file in os.listdir(source):\n",
-    "                    source_file = os.path.join(source, file)\n",
-    "                    target_file = f\"{target}/{file}\"\n",
-    "                    \n",
-    "                    if os.path.isfile(source_file):\n",
-    "                        dbutils.fs.cp(f\"file:{source_file}\", target_file, recurse=False)\n",
-    "                        print(f\"    ✓ {file}\")\n",
-    "            else:\n",
-    "                print(f\"  ⚠ Folder {folder}/ nie istnieje w dataset/\")\n",
-    "        \n",
-    "        print(\"\\n✓ Kopiowanie zakończone pomyślnie!\")\n",
-    "        print(f\"Dane dostępne w: {VOLUMES_BASE_PATH}\")\n",
-    "        \n",
-    "        return True\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        print(f\"\\n✗ Błąd kopiowania: {e}\")\n",
-    "        print(\"Upewnij się, że:\")\n",
-    "        print(\"  1. Unity Catalog jest włączony\")\n",
-    "        print(\"  2. Volume został utworzony: CREATE VOLUME IF NOT EXISTS training_catalog.default.kion_datasets\")\n",
-    "        print(\"  3. Masz uprawnienia do zapisu w Volume\")\n",
-    "        return False\n",
-    "\n",
-    "# Odkomentuj poniższą linię, aby skopiować dane do Volumes (tylko raz, przed Dzień 3)\n",
-    "# copy_dataset_to_volumes()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 🔍 Funkcje diagnostyczne\n",
-    "\n",
-    "Pomocne funkcje do sprawdzania stanu środowiska i danych."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def show_environment_info():\n",
-    "    \"\"\"Wyświetla pełne informacje o konfiguracji środowiska\"\"\"\n",
-    "    print(\"=\" * 70)\n",
-    "    print(\"📊 INFORMACJE O ŚRODOWISKU SZKOLENIOWYM\")\n",
-    "    print(\"=\" * 70)\n",
-    "    \n",
-    "    print(f\"\\n👤 Użytkownik: {raw_user}\")\n",
-    "    print(f\"   User slug: {user_slug}\")\n",
-    "    \n",
-    "    print(f\"\\n📁 Schematy:\")\n",
-    "    print(f\"   Bronze: {CATALOG}.{BRONZE_SCHEMA}\")\n",
-    "    print(f\"   Silver: {CATALOG}.{SILVER_SCHEMA}\")\n",
-    "    print(f\"   Gold:   {CATALOG}.{GOLD_SCHEMA}\")\n",
-    "    \n",
-    "    print(f\"\\n💾 Ścieżki do danych:\")\n",
-    "    print(f\"   Dataset (Dzień 1-2): {DATASET_BASE_PATH}\")\n",
-    "    print(f\"   Volumes (Dzień 3):   {VOLUMES_BASE_PATH}\")\n",
-    "    \n",
-    "    print(f\"\\n⚙️ Spark:\")\n",
-    "    print(f\"   Spark version: {spark.version}\")\n",
-    "    try:\n",
-    "        print(f\"   Databricks Runtime: {spark.conf.get('spark.databricks.clusterUsageTags.sparkVersion')}\")\n",
-    "    except:\n",
-    "        print(f\"   Databricks Runtime: N/A (local environment)\")\n",
-    "    \n",
-    "    print(f\"\\n🗄️ Unity Catalog:\")\n",
-    "    try:\n",
-    "        current_catalog = spark.sql(\"SELECT current_catalog()\").first()[0]\n",
-    "        current_schema = spark.sql(\"SELECT current_schema()\").first()[0]\n",
-    "        print(f\"   Current catalog: {current_catalog}\")\n",
-    "        print(f\"   Current schema: {current_schema}\")\n",
-    "        print(f\"   Status: ✓ Aktywny\")\n",
-    "    except:\n",
-    "        print(f\"   Status: ✗ Niedostępny\")\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\" * 70)\n",
-    "\n",
-    "def show_tables_summary():\n",
-    "    \"\"\"Wyświetla podsumowanie tabel utworzonych w schematach\"\"\"\n",
-    "    print(\"=\" * 70)\n",
-    "    print(\"📋 PODSUMOWANIE TABEL W SCHEMATACH\")\n",
-    "    print(\"=\" * 70)\n",
-    "    \n",
-    "    for schema_name, schema_var in [\n",
-    "        (\"Bronze\", BRONZE_SCHEMA),\n",
-    "        (\"Silver\", SILVER_SCHEMA),\n",
-    "        (\"Gold\", GOLD_SCHEMA)\n",
-    "    ]:\n",
-    "        print(f\"\\n{schema_name} Layer ({CATALOG}.{schema_var}):\")\n",
-    "        try:\n",
-    "            tables = spark.sql(f\"SHOW TABLES IN {CATALOG}.{schema_var}\")\n",
-    "            table_count = tables.count()\n",
-    "            \n",
-    "            if table_count > 0:\n",
-    "                print(f\"  ✓ {table_count} tabel(i):\")\n",
-    "                for row in tables.collect():\n",
-    "                    table_type = \"VIEW\" if row.isTemporary else \"TABLE\"\n",
-    "                    print(f\"    - {row.tableName} ({table_type})\")\n",
-    "            else:\n",
-    "                print(f\"  ⚠ Brak tabel (schemat pusty)\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"  ✗ Nie można odczytać tabel: {e}\")\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\" * 70)\n",
-    "\n",
-    "def show_dataset_statistics():\n",
-    "    \"\"\"Wyświetla statystyki plików w folderze dataset/\"\"\"\n",
-    "    print(\"=\" * 70)\n",
-    "    print(\"📈 STATYSTYKI DANYCH ŹRÓDŁOWYCH\")\n",
-    "    print(\"=\" * 70)\n",
-    "    \n",
-    "    folders = ['customers', 'orders', 'products']\n",
-    "    \n",
-    "    for folder in folders:\n",
-    "        folder_path = os.path.join(DATASET_BASE_PATH, folder)\n",
-    "        print(f\"\\n📂 {folder}/\")\n",
-    "        \n",
-    "        if os.path.exists(folder_path):\n",
-    "            files = [f for f in os.listdir(folder_path) if os.path.isfile(os.path.join(folder_path, f))]\n",
-    "            print(f\"  Liczba plików: {len(files)}\")\n",
-    "            \n",
-    "            total_size = 0\n",
-    "            for file in files:\n",
-    "                file_path = os.path.join(folder_path, file)\n",
-    "                size = os.path.getsize(file_path)\n",
-    "                total_size += size\n",
-    "                size_mb = size / (1024 * 1024)\n",
-    "                print(f\"    - {file}: {size_mb:.2f} MB\")\n",
-    "            \n",
-    "            total_mb = total_size / (1024 * 1024)\n",
-    "            print(f\"  Łączny rozmiar: {total_mb:.2f} MB\")\n",
-    "        else:\n",
-    "            print(f\"  ✗ Folder nie istnieje\")\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\" * 70)\n",
-    "\n",
-    "# Przykład użycia (odkomentuj aby uruchomić):\n",
-    "# show_environment_info()\n",
-    "# show_tables_summary()\n",
-    "# show_dataset_statistics()"
    ]
   }
  ],
