--- a/DZIEN_1_Fundamentals_Exploration/05_views_workflows.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/05_views_workflows.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d762e60b-4016-493d-a790-17dce06e2417",
      "showTitle": false,
@@ -30,7 +33,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "eff41f20-1d23-4061-8a4d-4a998f20aa17",
      "showTitle": false,
@@ -54,7 +60,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f454dd8f-321d-4e7b-8069-e337bcb2db41",
      "showTitle": false,
@@ -119,7 +128,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a1945624-1ca2-428f-94e1-97478685ee0f",
      "showTitle": false,
