chore: Zapisanie zmian w innych notebookach przed merge

--- a/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
@@ -196,22 +196,22 @@
     }
    },
    "source": [
-    "## Sekcja 1: Wczytanie danych z Volume\n",
+    "## Sekcja 1: Wczytanie danych z dataset\n",
     "\n",
     "**Wprowadzenie teoretyczne:**\n",
     "\n",
-    "W Databricks, Unity Catalog Volumes pozwalają na przechowywanie plików nietabelarycznych (CSV, JSON, Parquet) w zarządzanym storage. Volumes są integralną częścią UC i zapewniają kontrolę dostępu na poziie plików.\n",
+    "W tym notebooku wykorzystujemy pliki z lokalnego folderu `dataset/` (Dzień 1-2 szkolenia). Pliki CSV, JSON i Parquet są ładowane bezpośrednio z systemu plików używając ścieżki `DATASET_BASE_PATH` z `00_setup.ipynb`.\n",
     "\n",
     "**Kluczowe pojęcia:**\n",
-    "- **Volume**: Logiczny kontener dla plików w Unity Catalog\n",
-    "- **Volume path**: Ścieżka w formacie `/Volumes/{catalog}/{schema}/{volume}/`\n",
-    "- **Managed Volume**: Zarządzany przez Databricks (lifecycle tied to UC)\n",
-    "- **External Volume**: Wskazuje na zewnętrzny storage (S3, ADLS, GCS)\n",
+    "- **DATASET_BASE_PATH**: Ścieżka do folderu dataset/ zdefiniowana w 00_setup.ipynb\n",
+    "- **CSV Reader**: spark.read.format(\"csv\") z opcjami (header, inferSchema)\n",
+    "- **Schema inference**: Automatyczne wykrywanie typów vs jawna definicja schematu\n",
+    "- **File paths**: Absolutne ścieżki do plików w lokalnym systemie\n",
     "\n",
     "**Zastosowanie praktyczne:**\n",
-    "- Przechowywanie raw files przed załadowaniem do Delta tables\n",
-    "- Staging area dla batch ingestion\n",
-    "- Archiwizacja danych źródłowych"
+    "- Wczytywanie raw files z folderu dataset/\n",
+    "- Eksploracja i profilowanie danych przed czyszczeniem\n",
+    "- Przygotowanie do załadowania do Delta tables (Bronze layer)"
    ]
   },
   {
@@ -227,12 +227,12 @@
     }
    },
    "source": [
-    "### Przykład 1.1: Wczytanie danych customers z Volume\n",
+    "### Przykład 1.1: Wczytanie danych customers z dataset\n",
     "\n",
-    "**Cel:** Załadowanie danych klientów z pliku CSV przechowywanego w Unity Catalog Volume\n",
+    "**Cel:** Załadowanie danych klientów z pliku CSV przechowywanego w folderze dataset/\n",
     "\n",
     "**Podejście:**\n",
-    "1. Zdefiniowanie ścieżki do volume\n",
+    "1. Zdefiniowanie ścieżki używając DATASET_BASE_PATH z 00_setup.ipynb\n",
     "2. Wczytanie CSV z opcjami (header, inferSchema)\n",
     "3. Podstawowa eksploracja załadowanych danych"
    ]
@@ -255,10 +255,10 @@
    },
    "outputs": [],
    "source": [
-    "# RESOURCE: CSV file w volume: /Volumes/{CATALOG}/default/datasets/customers/customers.csv\n",
+    "# RESOURCE: CSV file: {DATASET_BASE_PATH}/customers/customers.csv\n",
     "# VARIABLE: df_customers - DataFrame z danymi klientów\n",
     "\n",
-    "# Ścieżka do pliku w volume\n",
+    "# Ścieżka do pliku w dataset\n",
     "customers_path = f\"{DATASET_BASE_PATH}/customers/customers.csv\"\n",
     "\n",
     "# Wczytanie danych\n",
@@ -301,7 +301,7 @@
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
-    "Volume path używa formatu `/Volumes/{catalog}/{schema}/{volume}/{path}`. Domyślnie używamy schema `default` i volume `datasets`. Opcja `inferSchema=true` automatycznie wykrywa typy danych, co jest wygodne dla eksploracji, ale w produkcji zaleca się jawne definiowanie schematów dla wydajności i kontroli."
+    "Ścieżka do pliku używa zmiennej `DATASET_BASE_PATH` zdefiniowanej w `00_setup.ipynb`, która wskazuje na folder `dataset/` w workspace. Opcja `inferSchema=true` automatycznie wykrywa typy danych, co jest wygodne dla eksploracji, ale w produkcji zaleca się jawne definiowanie schematów dla wydajności i kontroli."
    ]
   },
   {
@@ -1372,13 +1372,12 @@
     "# Przykład: Kompleksowe czyszczenie danych w PySpark\n",
     "\n",
     "df_cleaned_pyspark = df_customers \\\n",
-    "    .fillna({\"city\": \"Unknown\", \"country\": \"Poland\"}) \\\n",
+    "    .fillna({\"city\": \"Unknown\", \"country\": \"USA\"}) \\\n",
     "    .dropna(subset=[\"customer_id\"]) \\\n",
-    "    .withColumn(\"customer_name\", F.trim(F.initcap(F.col(\"customer_name\")))) \\\n",
+    "    .withColumn(\"first_name\", F.trim(F.initcap(F.col(\"first_name\")))) \\\n",
+    "    .withColumn(\"last_name\", F.trim(F.initcap(F.col(\"last_name\")))) \\\n",
     "    .withColumn(\"email\", F.lower(F.trim(F.col(\"email\")))) \\\n",
-    "    .dropDuplicates([\"customer_id\"]) \\\n",
-    "    .withColumn(\"age\", F.col(\"age\").cast(\"int\")) \\\n",
-    "    .filter((F.col(\"age\") >= 18) & (F.col(\"age\") <= 120))\n",
+    "    .dropDuplicates([\"customer_id\"])\n",
     "\n",
     "print(f\"Rekordy po czyszczeniu (PySpark): {df_cleaned_pyspark.count()}\")\n",
     "display(df_cleaned_pyspark.limit(5))"
@@ -1454,17 +1453,16 @@
     "df_cleaned_sql = spark.sql(\"\"\"\n",
     "SELECT DISTINCT\n",
     "    customer_id,\n",
-    "    TRIM(INITCAP(customer_name)) as customer_name,\n",
+    "    TRIM(INITCAP(first_name)) as first_name,\n",
+    "    TRIM(INITCAP(last_name)) as last_name,\n",
     "    LOWER(TRIM(email)) as email,\n",
-    "    CAST(age AS INT) as age,\n",
     "    COALESCE(city, 'Unknown') as city,\n",
-    "    COALESCE(country, 'Poland') as country,\n",
+    "    COALESCE(country, 'USA') as country,\n",
     "    phone,\n",
-    "    registration_date\n",
+    "    registration_date,\n",
+    "    customer_segment\n",
     "FROM customers_raw\n",
     "WHERE customer_id IS NOT NULL\n",
-    "    AND CAST(age AS INT) >= 18\n",
-    "    AND CAST(age AS INT) <= 120\n",
     "\"\"\")\n",
     "\n",
     "print(f\"Rekordy po czyszczeniu (SQL): {df_cleaned_sql.count()}\")\n",
@@ -1513,7 +1511,7 @@
     "## Walidacja i weryfikacja\n",
     "\n",
     "### Checklist - Co powinieneś uzyskać:\n",
-    "- [ ] Dane załadowane z Volume (customers.csv)\n",
+    "- [ ] Dane załadowane z dataset/ (customers.csv używając DATASET_BASE_PATH)\n",
     "- [ ] Data profiling report wykonany\n",
     "- [ ] Null values obsłużone (fillna/dropna/coalesce)\n",
     "- [ ] Typy danych skonwertowane i zwalidowane (cast, to_date)\n",
@@ -1610,14 +1608,20 @@
     "\n",
     "**Rozwiązanie:**\n",
     "```python\n",
-    "# Sprawdź dostępne volumes\n",
-    "spark.sql(f\"SHOW VOLUMES IN {CATALOG}.default\").show()\n",
+    "# Sprawdź zawartość DATASET_BASE_PATH\n",
+    "import os\n",
+    "if os.path.exists(DATASET_BASE_PATH):\n",
+    "    print(f\"✓ DATASET_BASE_PATH exists: {DATASET_BASE_PATH}\")\n",
+    "    for folder in os.listdir(DATASET_BASE_PATH):\n",
+    "        print(f\"  - {folder}/\")\n",
+    "else:\n",
+    "    print(f\"✗ DATASET_BASE_PATH not found: {DATASET_BASE_PATH}\")\n",
     "\n",
-    "# Sprawdź zawartość volume\n",
-    "dbutils.fs.ls(f\"/Volumes/{CATALOG}/default/datasets/\")\n",
-    "\n",
-    "# Upewnij się, że plik istnieje\n",
-    "dbutils.fs.ls(f\"/Volumes/{CATALOG}/default/datasets/customers/\")\n",
+    "# Lista plików w customers/\n",
+    "customers_dir = f\"{DATASET_BASE_PATH}/customers\"\n",
+    "if os.path.exists(customers_dir):\n",
+    "    for file in os.listdir(customers_dir):\n",
+    "        print(f\"  - {file}\")\n",
     "```\n",
     "\n",
     "### Problem 2: InferSchema daje niepoprawne typy\n",
@@ -1632,12 +1636,18 @@
     "\n",
     "schema = StructType([\n",
     "    StructField(\"customer_id\", StringType(), False),\n",
-    "    StructField(\"customer_name\", StringType(), True),\n",
-    "    StructField(\"age\", IntegerType(), True),\n",
-    "    StructField(\"registration_date\", DateType(), True)\n",
+    "    StructField(\"first_name\", StringType(), True),\n",
+    "    StructField(\"last_name\", StringType(), True),\n",
+    "    StructField(\"email\", StringType(), True),\n",
+    "    StructField(\"phone\", StringType(), True),\n",
+    "    StructField(\"city\", StringType(), True),\n",
+    "    StructField(\"state\", StringType(), True),\n",
+    "    StructField(\"country\", StringType(), True),\n",
+    "    StructField(\"registration_date\", StringType(), True),\n",
+    "    StructField(\"customer_segment\", StringType(), True)\n",
     "])\n",
     "\n",
-    "df = spark.read.format(\"csv\").option(\"header\", \"true\").schema(schema).load(path)\n",
+    "df = spark.read.format(\"csv\").option(\"header\", \"true\").schema(schema).load(customers_path)\n",
     "```\n",
     "\n",
     "### Problem 3: Konwersja dat zwraca null\n",
@@ -1648,14 +1658,14 @@
     "**Rozwiązanie:**\n",
     "```python\n",
     "# Sprawdź przykładowe wartości\n",
-    "df.select(\"date_column\").show(5, truncate=False)\n",
+    "df.select(\"registration_date\").show(5, truncate=False)\n",
     "\n",
     "# Wypróbuj różne formaty\n",
     "df.select(\n",
-    "    F.col(\"date_column\"),\n",
-    "    F.to_date(F.col(\"date_column\"), \"yyyy-MM-dd\").alias(\"format1\"),\n",
-    "    F.to_date(F.col(\"date_column\"), \"dd/MM/yyyy\").alias(\"format2\"),\n",
-    "    F.to_date(F.col(\"date_column\"), \"MM-dd-yyyy\").alias(\"format3\")\n",
+    "    F.col(\"registration_date\"),\n",
+    "    F.to_date(F.col(\"registration_date\"), \"yyyy-MM-dd\").alias(\"format1\"),\n",
+    "    F.to_date(F.col(\"registration_date\"), \"dd/MM/yyyy\").alias(\"format2\"),\n",
+    "    F.to_date(F.col(\"registration_date\"), \"MM-dd-yyyy\").alias(\"format3\")\n",
     ").show(5)\n",
     "```\n",
     "\n",
@@ -1693,7 +1703,7 @@
     "\n",
     "### Jakość kodu:\n",
     "- Zawsze waliduj dane po konwersji typów (null counts, value ranges)\n",
-    "- Dodawaj flagi jakości (age_valid, date_parsed_success) dla auditability\n",
+    "- Dodawaj flagi jakości (email_valid, date_parsed_success) dla auditability\n",
     "- Loguj statystyki czyszczenia (ile rekordów usunięto, wypełniono)\n",
     "- Zachowaj oryginalne wartości w osobnych kolumnach dla troubleshootingu\n",
     "\n",
@@ -1707,7 +1717,7 @@
     "- Wszystkie transformacje muszą być deterministyczne (powtarzalne)\n",
     "- Audit trail: timestamp, user, operation w metadata columns\n",
     "- Zachowaj raw data w Bronze layer (nigdy nie nadpisuj źródła)\n",
-    "- Używaj Unity Catalog Volumes dla managed file storage"
+    "- Używaj DATASET_BASE_PATH z 00_setup.ipynb dla spójnych ścieżek do danych"
    ]
   },
   {
@@ -1729,7 +1739,7 @@
     "## Podsumowanie\n",
     "\n",
     "### Co zostało osiągnięte:\n",
-    "- Załadowanie danych z Unity Catalog Volume (managed storage)\n",
+    "- Załadowanie danych z folderu dataset/ (używając DATASET_BASE_PATH)\n",
     "- Data profiling i identyfikacja problemów jakości\n",
     "- Obsługa wartości null (fillna, dropna, coalesce)\n",
     "- Walidacja i konwersja typów (cast, to_date, to_timestamp)\n",
@@ -1749,11 +1759,12 @@
     "|----------|---------|-----|\n",
     "| Fill nulls | `df.fillna({\"col\": \"value\"})` | `COALESCE(col, 'value')` |\n",
     "| Drop nulls | `df.dropna(subset=[\"col\"])` | `WHERE col IS NOT NULL` |\n",
-    "| Cast type | `col(\"age\").cast(\"int\")` | `CAST(age AS INT)` |\n",
     "| Parse date | `to_date(col(\"date\"), \"yyyy-MM-dd\")` | `TO_DATE(date, 'yyyy-MM-dd')` |\n",
-    "| Remove duplicates | `df.dropDuplicates([\"id\"])` | `SELECT DISTINCT ON (id)` |\n",
+    "| Remove duplicates | `df.dropDuplicates([\"id\"])` | `SELECT DISTINCT` |\n",
     "| Trim whitespace | `trim(col(\"name\"))` | `TRIM(name)` |\n",
     "| Lowercase | `lower(col(\"email\"))` | `LOWER(email)` |\n",
+    "| Uppercase | `upper(col(\"country\"))` | `UPPER(country)` |\n",
+    "| Title case | `initcap(col(\"city\"))` | `INITCAP(city)` |\n",
     "\n",
     "### Następne kroki:\n",
     "- **Kolejny notebook**: 05_views_workflows.ipynb - Persistent views i basic workflows\n",
@@ -1761,7 +1772,7 @@
     "- **Materiały dodatkowe**: \n",
     "  - Databricks Data Quality Guide\n",
     "  - Delta Lake best practices documentation\n",
-    "- **Zadanie domowe**: Zastosuj poznane techniki czyszczenia na dataset orders (orders_batch.json z Volume)"
+    "- **Zadanie domowe**: Zastosuj poznane techniki czyszczenia na dataset orders (orders_batch.json z dataset/)"
    ]
   },
   {
