--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -971,22 +971,27 @@
     "# Symulacja nowych i zmienionych zamówień\n",
     "\n",
     "updates_data = [\n",
-    "    # Istniejące zamówienie - zmiana statusu (UPDATE)\n",
-    "    (\"ORD00000001\", \"CUST005909\", \"2025-01-10\", 150.0, \"Shipped\"),\n",
+    "    # Istniejące zamówienie - zmiana total_amount (UPDATE)\n",
+    "    (\"ORD00000001\", \"CUST005909\", \"PROD000164\", \"STORE017\", \"2024-12-31T23:56:00\", \n",
+    "     1, 206.74, 0, 250.00, \"Cash\"),\n",
     "    \n",
     "    # Nowe zamówienie (INSERT)\n",
-    "    (\"ORD99999999\", \"CUST009999\", \"2025-01-20\", 299.99, \"Pending\"),\n",
+    "    (\"ORD99999999\", \"CUST009999\", \"PROD001234\", \"STORE050\", \"2025-01-20T14:30:00\", \n",
+    "     2, 149.99, 10, 269.98, \"Credit Card\"),\n",
     "    \n",
     "    # Kolejne nowe zamówienie (INSERT)\n",
-    "    (\"ORD99999998\", \"CUST009998\", \"2025-01-21\", 199.50, \"Pending\")\n",
+    "    (\"ORD99999998\", \"CUST009998\", \"PROD000567\", \"STORE025\", \"2025-01-21T10:15:00\", \n",
+    "     3, 66.50, 5, 189.53, \"Debit Card\")\n",
     "]\n",
     "\n",
     "updates_df = spark.createDataFrame(\n",
     "    updates_data,\n",
-    "    [\"order_id\", \"customer_id\", \"order_date\", \"order_amount\", \"order_status\"]\n",
+    "    [\"order_id\", \"customer_id\", \"product_id\", \"store_id\", \"order_datetime\",\n",
+    "     \"quantity\", \"unit_price\", \"discount_percent\", \"total_amount\", \"payment_method\"]\n",
     ")\n",
     "\n",
     "print(\"=== Dane do MERGE ===\")\n",
+    "print(\"Uwaga: Używamy order_datetime (jak w orders_batch.json)\")\n",
     "display(updates_df)"
    ]
   },
@@ -1021,15 +1026,20 @@
     "        \"target.order_id = source.order_id\"  # Merge key\n",
     "    )\n",
     "    .whenMatchedUpdate(set = {\n",
-    "        \"order_status\": \"source.order_status\",\n",
-    "        \"order_amount\": \"source.order_amount\"\n",
+    "        \"total_amount\": \"source.total_amount\",\n",
+    "        \"payment_method\": \"source.payment_method\"\n",
     "    })\n",
     "    .whenNotMatchedInsert(values = {\n",
     "        \"order_id\": \"source.order_id\",\n",
     "        \"customer_id\": \"source.customer_id\",\n",
-    "        \"order_date\": \"source.order_date\",\n",
-    "        \"order_amount\": \"source.order_amount\",\n",
-    "        \"order_status\": \"source.order_status\"\n",
+    "        \"product_id\": \"source.product_id\",\n",
+    "        \"store_id\": \"source.store_id\",\n",
+    "        \"order_datetime\": \"source.order_datetime\",\n",
+    "        \"quantity\": \"source.quantity\",\n",
+    "        \"unit_price\": \"source.unit_price\",\n",
+    "        \"discount_percent\": \"source.discount_percent\",\n",
+    "        \"total_amount\": \"source.total_amount\",\n",
+    "        \"payment_method\": \"source.payment_method\"\n",
     "    })\n",
     "    .execute()\n",
     ")\n",
@@ -1093,12 +1103,18 @@
     "**Wyjaśnienie:**\n",
     "\n",
     "MERGE INTO w Delta Lake:\n",
-    "1. **Merge Key**: `order_id` identyfikuje dopasowane rekordy\n",
-    "2. **WHEN MATCHED**: Aktualizuje `order_status` i `order_amount` dla istniejących zamówień\n",
-    "3. **WHEN NOT MATCHED**: Wstawia nowe zamówienia z wszystkimi kolumnami\n",
+    "1. **Merge Key**: `order_id` identyfikuje dopasowane rekordy (klucz biznesowy)\n",
+    "2. **WHEN MATCHED**: Aktualizuje `total_amount` i `payment_method` dla istniejących zamówień\n",
+    "3. **WHEN NOT MATCHED**: Wstawia nowe zamówienia z wszystkimi kolumnami ze schematu orders\n",
     "4. **Atomicity**: Cała operacja (UPDATE + INSERT) jest jedną transakcją ACID\n",
     "\n",
-    "To najbardziej efektywny sposób implementacji incremental data loading w Delta Lake."
+    "To najbardziej efektywny sposób implementacji incremental data loading w Delta Lake.\n",
+    "\n",
+    "**Zalety MERGE vs DELETE + INSERT:**\n",
+    "- Jedna transakcja zamiast dwóch (szybsze, bezpieczniejsze)\n",
+    "- Brak data loss risk przy failure\n",
+    "- Lepsza performance dla dużych tabel\n",
+    "- Automatyczne partition pruning"
    ]
   },
   {
@@ -1406,18 +1422,24 @@
    "source": [
     "# Przykład 5.1 - Schema Evolution z mergeSchema\n",
     "\n",
-    "# Sprawdź aktualny schemat tabeli\n",
+    "# KROK 1: Sprawdź aktualny schemat tabeli\n",
     "print(\"=== Aktualny schemat tabeli ===\")\n",
     "spark.table(CUSTOMERS_DELTA).printSchema()\n",
     "\n",
+    "# Policz kolumny\n",
+    "current_columns = len(spark.table(CUSTOMERS_DELTA).columns)\n",
+    "print(f\"\\nAktualna liczba kolumn: {current_columns}\")\n",
+    "\n",
     "# Utwórz DataFrame z nowymi kolumnami\n",
     "extended_customers = spark.createDataFrame([\n",
-    "    (9999, \"Ewa Wiśniewska\", \"ewa.wisn@example.com\", \"Poland\", \"2025-01-25\", \n",
-    "     \"Premium\", \"Warsaw\"),  # Nowe kolumny: loyalty_tier, city\n",
-    "], [\"customer_id\", \"customer_name\", \"email\", \"country\", \"registration_date\", \n",
-    "    \"loyalty_tier\", \"city\"])\n",
+    "extended_customers = spark.createDataFrame([\n",
+    "    (\"CUST_9999\", \"Ewa\", \"Wiśniewska\", \"ewa.wisn@example.com\", \"+48 600 123 456\",\n",
+    "     \"Warsaw\", \"mazowieckie\", \"Poland\", \"2025-01-25\", \"Premium\", \"Premium\", \"PL\")\n",
+    "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \n",
+    "    \"country\", \"registration_date\", \"customer_segment\", \"loyalty_tier\", \"preferred_language\"])\n",
     "\n",
     "print(\"\\n=== Nowy DataFrame z dodatkowymi kolumnami ===\")\n",
+    "print(\"Nowe kolumny: loyalty_tier, preferred_language\")\n",
     "extended_customers.printSchema()\n",
     "\n",
     "# Zapis bez mergeSchema - spowoduje błąd!\n",
@@ -1450,13 +1472,143 @@
     "spark.table(CUSTOMERS_DELTA).printSchema()\n",
     "\n",
     "# Sprawdź nowy rekord\n",
-    "print(\"\\n=== Nowy rekord z dodatkowymi kolumnami ===\")\n",
+    "print(\"\\n=== Nowy rekord z dodatkowymi kolumnami (loyalty_tier, preferred_language) ===\")\n",
     "display(\n",
     "    spark.table(CUSTOMERS_DELTA)\n",
-    "    .filter(F.col(\"customer_id\") == 9999)\n",
+    "    .filter(F.col(\"customer_id\") == \"CUST_9999\")\n",
+    "    .select(\"customer_id\", \"first_name\", \"last_name\", \"email\", \"customer_segment\", \n",
+    "            \"loyalty_tier\", \"preferred_language\")\n",
     ")\n",
     "\n",
-    "print(\"\\nUwaga: Stare rekordy mają NULL w nowych kolumnach!\")"
+    "# Sprawdź stare rekordy - mają NULL w nowych kolumnach\n",
+    "print(\"\\n=== Stare rekordy (mają NULL w loyalty_tier, preferred_language) ===\")\n",
+    "display(\n",
+    "    spark.table(CUSTOMERS_DELTA)\n",
+    "    .filter(F.col(\"customer_id\").like(\"CUST000%\"))\n",
+    "    .select(\"customer_id\", \"first_name\", \"last_name\", \"customer_segment\", \n",
+    "            \"loyalty_tier\", \"preferred_language\")\n",
+    "    .limit(5)\n",
+    ")\n",
+    "\n",
+    "print(\"\\n⚠️  Uwaga: Stare rekordy mają NULL w nowych kolumnach (loyalty_tier, preferred_language)!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KROK 2: Utwórz DataFrame z nowymi kolumnami (loyalty_tier, preferred_language)\n",
+    "# Używamy istniejącego schematu (first_name, last_name) + nowe kolumny\n",
+    "extended_customers = spark.createDataFrame([\n",
+    "    (\"CUST_9999\", \"Ewa\", \"Wiśniewska\", \"ewa.wisn@example.com\", \"+48 600 123 456\",\n",
+    "     \"Warsaw\", \"mazowieckie\", \"Poland\", \"2025-01-25\", \"Premium\", \"Premium\", \"PL\")\n",
+    "], [\"customer_id\", \"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \n",
+    "    \"country\", \"registration_date\", \"customer_segment\", \"loyalty_tier\", \"preferred_language\"])\n",
+    "\n",
+    "print(\"=== Nowy DataFrame z dodatkowymi kolumnami ===\")\n",
+    "print(\"Nowe kolumny: loyalty_tier, preferred_language\")\n",
+    "extended_customers.printSchema()\n",
+    "\n",
+    "# Policz kolumny w nowym DataFrame\n",
+    "new_columns = len(extended_customers.columns)\n",
+    "print(f\"\\nLiczba kolumn w nowym DataFrame: {new_columns}\")\n",
+    "print(f\"Różnica: +{new_columns - current_columns} nowe kolumny\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KROK 3: Zapis bez mergeSchema - spowoduje błąd!\n",
+    "print(\"=== Próba zapisu bez mergeSchema ===\")\n",
+    "try:\n",
+    "    (\n",
+    "        extended_customers\n",
+    "        .write\n",
+    "        .format(\"delta\")\n",
+    "        .mode(\"append\")\n",
+    "        .saveAsTable(CUSTOMERS_DELTA)\n",
+    "    )\n",
+    "    print(\"✓ Zapis się powiódł (nieoczekiwane!)\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Błąd (oczekiwany): {str(e)[:200]}...\")\n",
+    "    print(\"\\nDelta Lake blokuje niezgodne schematy!\")\n",
+    "    print(\"Powód: Tabela ma {0} kolumn, nowy DataFrame ma {1} kolumn\".format(\n",
+    "        current_columns, new_columns\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KROK 4: Zapis z mergeSchema - automatyczne dodanie kolumn\n",
+    "print(\"=== Zapis z mergeSchema=true ===\")\n",
+    "\n",
+    "(\n",
+    "    extended_customers\n",
+    "    .write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"append\")\n",
+    "    .option(\"mergeSchema\", \"true\")\n",
+    "    .saveAsTable(CUSTOMERS_DELTA)\n",
+    ")\n",
+    "\n",
+    "print(\"✓ Zapis z mergeSchema=true wykonany pomyślnie!\")\n",
+    "print(\"Delta Lake automatycznie dodał nowe kolumny do schematu tabeli\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KROK 5: Sprawdź nowy schemat po schema evolution\n",
+    "print(\"=== Schemat po schema evolution ===\")\n",
+    "spark.table(CUSTOMERS_DELTA).printSchema()\n",
+    "\n",
+    "# Policz kolumny po evolution\n",
+    "columns_after = len(spark.table(CUSTOMERS_DELTA).columns)\n",
+    "print(f\"\\nLiczba kolumn PO evolution: {columns_after}\")\n",
+    "print(f\"Dodano kolumn: {columns_after - current_columns}\")\n",
+    "print(f\"Nowe kolumny: loyalty_tier, preferred_language\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KROK 6: Weryfikacja - nowy rekord z dodatkowymi kolumnami\n",
+    "print(\"=== Nowy rekord z dodatkowymi kolumnami (loyalty_tier, preferred_language) ===\")\n",
+    "display(\n",
+    "    spark.table(CUSTOMERS_DELTA)\n",
+    "    .filter(F.col(\"customer_id\") == \"CUST_9999\")\n",
+    "    .select(\"customer_id\", \"first_name\", \"last_name\", \"email\", \"customer_segment\", \n",
+    "            \"loyalty_tier\", \"preferred_language\")\n",
+    ")\n",
+    "\n",
+    "# Sprawdź stare rekordy - mają NULL w nowych kolumnach\n",
+    "print(\"\\n=== Stare rekordy (mają NULL w loyalty_tier, preferred_language) ===\")\n",
+    "display(\n",
+    "    spark.table(CUSTOMERS_DELTA)\n",
+    "    .filter(F.col(\"customer_id\").like(\"CUST000%\"))\n",
+    "    .select(\"customer_id\", \"first_name\", \"last_name\", \"customer_segment\", \n",
+    "            \"loyalty_tier\", \"preferred_language\")\n",
+    "    .limit(5)\n",
+    ")\n",
+    "\n",
+    "print(\"\\n⚠️  Uwaga: Stare rekordy mają NULL w nowych kolumnach (loyalty_tier, preferred_language)!\")\n",
+    "print(\"To jest normalne zachowanie przy additive schema evolution.\")\n",
+    "print(\"Możesz później wypełnić NULL-e używając UPDATE lub fillna()\")"
    ]
   },
   {
@@ -1559,10 +1711,11 @@
     "print(f\"Rozmiar (bytes): {detail_after['sizeInBytes']}\")\n",
     "\n",
     "# OPTIMIZE z ZORDER BY (dla często filtrowanych kolumn)\n",
-    "spark.sql(f\"OPTIMIZE {ORDERS_DELTA} ZORDER BY (customer_id, order_date)\")\n",
+    "spark.sql(f\"OPTIMIZE {ORDERS_DELTA} ZORDER BY (customer_id, order_datetime)\")\n",
     "print(\"\\n✓ OPTIMIZE ZORDER BY wykonany\")\n",
     "\n",
-    "print(\"\\nUwaga: ZORDER BY sortuje dane wg customer_id i order_date dla data skipping!\")\n",
+    "print(\"\\nUwaga: ZORDER BY sortuje dane wg customer_id i order_datetime dla data skipping!\")\n",
+    "print(\"Zapytania z WHERE customer_id = 'X' AND order_datetime >= 'Y' będą znacznie szybsze!\")\n",
     "\n",
     "# Sprawdź historię optymalizacji\n",
     "optimize_history = spark.sql(f\"DESCRIBE HISTORY {ORDERS_DELTA}\")\n",
